# serenity-dynamic-modules

./: Cargo.toml  README.md
bot/: Cargo.toml
bot/src/: main.rs
commands/: Cargo.toml
commands/src/: lib.rs
