[package]
name = "bot"
version = "0.1.0"
authors = ["kangalioo <jannik.a.schaper@web.de>"]
edition = "2021"

[dependencies]
serenity = { version = "0.10.10", default-features = false, features = ["rustls_backend", "model", "client", "gateway"] }
tokio = { version = "1.0", features = ["rt-multi-thread"] }
libloading = "0.7.3"
